Salesforce-Investiment/force-app/main/default/objects/Cryptocurrency__c/fields/Current_Price_in_BRL__c.field-meta.xml
<CustomField>
    <fullName>Current_Price_in_BRL__c</fullName>
    <formula>Price_in_BRL__c *  Total_Cryptocurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Price in BRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>