Salesforce-Investiment/force-app/main/default/objects/Cryptocurrency__c/fields/Current_Profit_BRL__c.field-meta.xml
<CustomField>
    <fullName>Current_Profit_BRL__c</fullName>
    <formula>(Current_Price_in_BRL__c - Total_buy_price_in_BRL__c ) / Total_buy_price_in_BRL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Profit BRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>