Salesforce-Investiment/force-app/main/default/objects/Cryptocurrency__c/fields/Price_in_BRL__c.field-meta.xml
<CustomField>
    <fullName>Price_in_BRL__c</fullName>
    <label>Price in BRL</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>