Salesforce-Investiment/force-app/main/default/objects/Cryptocurrency__c/fields/Price_in_USDT__c.field-meta.xml
<CustomField>
    <fullName>Price_in_USDT__c</fullName>
    <label>Price in USDT</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>