Salesforce-Investiment/force-app/main/default/objects/Cryptocurrency__c/fields/Total_buy_price_in_BRL__c.field-meta.xml
<CustomField>
    <fullName>Total_buy_price_in_BRL__c</fullName>
    <label>Total buy price in BRL</label>
    <summarizedField>Crypto_asset__c.Buy_Price_BRL__c</summarizedField>
    <summaryForeignKey>Crypto_asset__c.Cryptocurrency__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>