Salesforce-Investiment/force-app/main/default/objects/Cryptocurrency__c/fields/Total_Cryptocurrency__c.field-meta.xml
<CustomField>
    <fullName>Total_Cryptocurrency__c</fullName>
    <label>Total Cryptocurrency</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>